SigmaCodebackup3rdSep/objects/Product_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>NonReceived_Quantity__c</fullName>
        <formula>Quantity__c -  Quantity_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request</label>
        <referenceTo>Product_Request__c</referenceTo>
        <relationshipName>Product_Request_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer</label>
        <referenceTo>Product_transfer__c</referenceTo>
        <relationshipName>Product_Transfer_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Request_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Transferred__c</fullName>
        <label>Quantity Transferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Required Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged Stock</fullName>
                </value>
                <value>
                    <fullName>Missing Stock</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Transfer</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Request_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Request Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>Product_Request__c</columns>
        <columns>Product_Transfer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRLI-{0000}</displayFormat>
        <label>Product Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Request Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>